@@ -4,6 +4,7 @@
 BZFlag 2.3.0  "Born Again"
 ----------------------------------------
 
+* Handicap is computed on the server - Alfredo Tupone, Bernt Hansen
 * Allow plugins to register custom flag types - Daniel Remenak
 * Forced *image.bzflag.org for image downloads until user sets 
   otherwise - David Anderson
